fixed: "bit" instead of "byte"

--- a/threema-protocol-analysis.tex
+++ b/threema-protocol-analysis.tex
@@ -199,7 +199,7 @@ agree on, the following data:
   \item Client system data, such as the Threema version, platform and the Java runtime
 \end{itemize}
 
-The nonce prefix is used together with an 8 bit counter to generate a
+The nonce prefix is used together with an 8 byte counter to generate a
 unique 24 byte nonce for every message\footnote{This method is explained in
   \href{https://stackoverflow.com/questions/13663604/questions-about-the-nacl-crypto-library/13663945\#13663945}{this}
   Stack Overflow discussion.}. I will be using the notation
